# idk-rs

./: Cargo.toml  build.rs
src/: main.rs
