[package]
name = "shellcode"
version = "0.1.0"
authors = ["Jaxii"]
edition = "2021"


[dependencies]
obfstr = "0.3.0"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[dependencies.num]
version = "0.4.0"
default-features = false

[dependencies.num-traits]
version = "0.2.15"
default-features = false

[build]
target = "x86_64-pc-windows-msvc"